<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/dimen_32"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_product_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="Select Item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/category_todo_button"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toEndOf="@+id/today_calendar_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_product_et"
        app:srcCompat="@drawable/ic_baseline_category" />

    <ImageButton
        android:id="@+id/save_product_button"
        android:layout_width="70dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleX="0.4"
        android:scaleY="0.4"
        android:contentDescription="@string/add_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/category_todo_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_product_et"
        app:srcCompat="@drawable/ic_baseline_save" />

    <ImageButton
        android:id="@+id/today_calendar_button"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/image_description"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_product_et"
        app:srcCompat="@drawable/ic_baseline_calendar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="244dp"
        android:layout_height="33dp"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:text="@string/expiry_date_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_todo_button" />

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="318dp"
        android:layout_height="296dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.16000003" />

    <RadioGroup
        android:id="@+id/radioGroup_category"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_todo_button">

        <RadioButton
            android:id="@+id/radioButton_dairy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:buttonTint="#FF3F51B5"
            android:minHeight="48dp"
            android:text="@string/radio_dairy"
            android:textColor="#FF3F51B5"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_dry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:buttonTint="#FF3F51B5"
            android:minHeight="48dp"
            android:text="@string/radio_dry"
            android:textColor="#FF3F51B5"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_spices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:buttonTint="#FF3F51B5"
            android:minHeight="48dp"
            android:text="@string/radio_spices"
            android:textColor="#FF3F51B5"
            android:textStyle="bold" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/calendar_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="calendar_view,textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>