<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_row_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/top_margin">

    <TextView
        android:id="@+id/product_row_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="22sp"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/product_row_chip"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <com.google.android.material.chip.Chip
        android:id="@+id/product_row_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/today"
        app:chipIcon="@drawable/ic_baseline_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_row_product" />

    <com.google.android.material.chip.Chip
        android:id="@+id/category_row_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/category"
        app:chipIcon="@drawable/ic_baseline_category"
        app:layout_constraintStart_toEndOf="@+id/product_row_chip"
        app:layout_constraintTop_toBottomOf="@+id/product_row_product" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.4"
        android:background="#E8E6E6"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_row_chip"></LinearLayout>

    <ImageButton
        android:id="@+id/product_delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_description"
        android:padding="@dimen/dimen_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>